--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-<!DOCTYPE html>
-  <html lang="">
-    <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Supply Mission</title>
-      <style> body {padding: 0; margin: 0;} </style>
-      <script src="matter.js"></script>
-      <script src="p5.js"></script>
-      <script src="p5.play.js"></script>
+<!DOCTYPE html><html lang="en"><head>
+    <script src="libraries/p5.js"></script>
+    <script src="libraries/p5.dom.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
+    <script src="libraries/matter.js"></script>
+    <script src="libraries/p5.play.js"></script>
+    <script src="js/Ground.js"></script>
+    <script src="js/Stand.js"></script>
+    <script src="js/Block.js"></script>
+    <script src="js/SlingShot.js"></script>
+    
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
 
-      <script src="sketch.js"></script>
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  
 
-    </head>
-    <body>
-    </body>
-  </html>
+</body></html>
